--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Мапапсели",
-  "short_name": "Мапапсели",
-  "start_url": "./index.html",
+  "short_name": "Мапапсели - приложения для контроля времени детей",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#73CDEC",
-  "theme_color": "#73CDEC",
+  "background_color": "#0175C2",
+  "theme_color": "#0175C2",
   "description": "A new Flutter project.",
   "orientation": "portrait-primary",
   "prefer_related_applications": false,
