--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Мапапсели",
-  "short_name": "Мапапсели - приложения для контроля времени детей",
+  "short_name": "Мапапсели",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
